# ec-sbm

./: .gitignore  .gitmodules  INSTALL.md  README.md  add_outliers.py  backup.sh  benchmark.sh  bin_on_stat.py  cd_sbm.py  check_stats.py  clean_networks.py  clean_outlier.py  clean_outlier.sh  combine_clustered_outliers.py  combine_clustered_outliers.sh  compare_clusterings.sh  compare_clusterings_all.sh  compare_clusterings_clstats.sh  compare_clusterings_gt.sh  compare_node_coverage.sh  compare_sbmwcc_leidenmodcm.sh  compare_simulators.sh  compare_simulators_batches.py  compute_cd_acc.py  compute_cd_acc.sh  compute_cd_acc_filt.py  compute_cd_acc_filt.sh  compute_cd_acc_sbm.py  compute_cd_acc_sbm.sh  compute_cluster_stats.py  compute_connectivity.py  compute_degree_dist.py  compute_excess_edges.py  compute_excess_edges.sh  compute_gt_stats.sh  compute_gt_stats_orig.sh  compute_potential_connectivity.py  compute_stats.py  compute_stats.sh  compute_upperbound.py  (+72 more)
ABCDGraphGenerator.jl/: config.toml  run.py
ABCDGraphGenerator.jl/src/: ABCDGraphGenerator.jl  graph_sampler.jl  graph_sampler_dev.jl  graph_sampler_ta.jl  graph_sampler_ta1.jl  graph_sampler_ta2.jl  graph_sampler_ta3.jl  graph_sampler_ta4.jl
ABCDGraphGenerator.jl/utils/: abcdta2_sampler.jl  abcdtadev_sampler.jl  example_config.toml  graph_sampler_abcdta.jl  graph_sampler_abcdta1.jl  graph_sampler_abcdta2.jl  graph_sampler_abcdta3.jl  graph_sampler_abcdta4.jl  graphtadev_sampler.jl  install.jl
cluster-statistics/: requirements.txt  stats.py
ec-sbm/: clean_outlier.py  combine_edgelists.py  combine_networks.py  correct_degree.py  gen_clustered.py  gen_outlier.py  generate_clustered.py  generate_outliers.py  match_degree.py  pipeline_common.py  profile.py  profile_common.py
ec-sbm/generate_clustered_network/: CMakeLists.txt  README.md  build.sh  calculate_mcs.py  generate_graphs.cpp  generate_sbm.py  run.sh  setup.cpp
ec-sbm/src/: utils.py
emulate-real-nets/: estimate_properties.py  estimate_properties_networkit.py
examples/bench/: README.md  cluster.csv  cluster.md  report.md  scalar_dist.csv  scalar_dist.md  summary.csv
examples/bench_stack/: per_net.csv  report.md  summary.csv
misc/: backup.sh  check_entropy.py  clean.sh  clean_errors.py  compare_simulators.py  compute_cluster_stats.py  compute_degree_dist.py  compute_entropy.py  compute_stats.sh  compute_upperbound.py  entropy.json  fix_abcd+o.py  fix_abcd+o.sh  fix_degree_v2_lahari.py  fix_edge.py  fix_edge_v2.py  fix_time.py  fix_time.sh  from_cm_plus_plus_data.py  gen_abcd.py  gen_abcdta3.py  gen_lfr_abcd_stats.ipynb  gen_network.sh  gen_sbm.py  generate_outliers.sh  get_data.ipynb  params.sh  profiling.py
misc/scripts/: combine_networks.sh  correct_degree.sh  (+3 more)
old_scripts/: check_entropy.py  compute_potential_connectivity.py  compute_wiring_efficiency.py  extract_csv_to_jsons.py  extract_network.py  from_cm_plus_plus_data.py  gen_abcdta2.py  gen_lfr.py  move_abcd.py  process_lahari.py  process_min_networks.py  stats.sh  visualize_small_network_generation.ipynb
scripts/: install.sh  run_ecsbm.sh
src/: constants.py  gen_cliques.py  gen_clustered.py  gen_clustered_core.py  gen_clustered_v3.py  gen_kec_core.py  gen_outlier.py  gen_pso_core.py  profile.py  utils.py
(+63 files in other folders)
